--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ numpy==1.19.5
 openpyxl==3.0.7
 packaging==21.0
 pandas==1.1.5
+psycopg2==2.7.7
 Pygments==2.10.0
 pyparsing==2.4.7
 PySocks==1.7.1
